# simula

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  export.sh  run.sh
assets/behaviors/: debug_agent.bht.ron  debug_all.bht.ron  debug_any.bht.ron  debug_any_repeat.bht.ron  debug_any_subtree.bht.ron  debug_defaults.bht.ron  debug_defaults.ron  debug_delay.bht.ron  debug_gate.bht.ron  debug_gate_blackboard.bht.ron  debug_gate_true.bht.ron  debug_machine.bht.ron  debug_repeat_repeater.bht.ron  debug_repeater.bht.ron  debug_sequence.bht.ron  debug_subtree_gate.bht.ron  debug_test.bht.ron  debug_until_all.bht.ron  debug_until_any.bht.ron
assets/data/: settings.diagnostics.ron
assets/inspector/: bt_first_created.bht.ron  debug_delay.bht.ron
assets/scripts/: behaviors.rhai
assets/shaders/: fast_material.wgsl  hexgrid.wgsl  lines.vert  lines.wgsl  pointcloud.wgsl  video_material.wgsl  voxel.frag  voxel.vert  voxel.wgsl  voxels.wgsl
assets/textures/: sample_uastc_zstd.ktx2  worldmap_sal.basis
assets/videos/: video.html
blender/: blender_server.py  module.py  simula.blend
crates/egui_node_graph/: Cargo.toml
crates/simula_action/: Cargo.toml
crates/simula_action/simula_action_macro/: Cargo.toml
crates/simula_action/simula_action_macro/src/: lib.rs
crates/simula_action/src/: action.rs  axis.rs  lib.rs  touch.rs  touch_sides.rs
crates/simula_behavior/: Cargo.toml  README.md
crates/simula_behavior/simula_behavior_macro/: Cargo.toml
crates/simula_behavior/simula_behavior_macro/src/: lib.rs
crates/simula_behavior/src/: asset.rs  color_hex_utils.rs  editor.rs  editor_old.rs  inspector.rs  lib.rs  my_behavior.rs  property.rs  protocol.rs  script.rs  server.rs  test.rs
crates/simula_behavior/src/actions/: debug.rs  debug_action.rs  debug_message.rs  delay.rs  mod.rs  wait.rs
crates/simula_behavior/src/composites/: all.rs  any.rs  mod.rs  selector.rs  sequence.rs  sequencer.rs  until_all.rs  until_any.rs
crates/simula_behavior/src/decorators/: delay.rs  gate.rs  guard.rs  identity.rs  inverter.rs  mod.rs  repeater.rs  script.rs  subtree.rs  succeeder.rs  timeout.rs
crates/simula_behavior/src/inspector/: behavior.rs  graph.rs  inspector.rs  menu.rs  mod.rs  node.rs  property.rs  utils.rs  window.rs
crates/simula_behavior/tests/: all.rs  any.rs  basic.rs  common.rs  identity.rs  inverter.rs  repeater.rs  selector.rs  sequence.rs  sequencer.rs  succeeder.rs  test.rs  until_any.rs  untill_all.rs
crates/simula_cad/: Cargo.toml
crates/simula_cad/src/shapes/: mod.rs  star.rs
crates/simula_console/: Cargo.toml
crates/simula_console/src/: diagnostics.rs  lib.rs  loader.rs
crates/simula_core/: Cargo.toml
crates/simula_core/src/: ease.rs  epath.rs  force_graph.rs  lattice.rs  lerp.rs  lib.rs  map_range.rs  prng.rs  ray.rs  signal.rs  spline.rs
crates/simula_core/src/signal/: control.rs  controller.rs  generator.rs  mod.rs
crates/simula_hexgrid/: Cargo.toml
crates/simula_hexgrid/src/: hexgrid.rs  lib.rs  mapcam.rs  pathfinding.rs  user_interface.rs  worldmap.rs  worldmap_material.rs
crates/simula_input/: Cargo.toml
crates/simula_input/simula_input_macro/: Cargo.toml
crates/simula_input/simula_input_macro/src/: lib.rs
crates/simula_input/src/: action.rs  egui.rs  inputmap.rs  keyboard.rs  lib.rs  mouse.rs
crates/simula_input/tests/: action.rs
crates/simula_mission/: Cargo.toml
crates/simula_mission/src/: account.rs  agent.rs  asset.rs  asset_info.rs  asset_ui.rs  builder.rs  drag_and_drop.rs  game.rs  lib.rs  machine.rs  utils.rs  wallet.rs  wallet_ui.rs
crates/simula_net/: Cargo.toml  README.md
crates/simula_net/src/: lib.rs
crates/simula_script/: Cargo.toml
crates/simula_script/src/: asset.rs  lib.rs
crates/simula_surrealdb/: Cargo.toml  test.srqlnb
crates/simula_surrealdb/src/: client.rs  lib.rs
crates/simula_video/: Cargo.toml
crates/simula_video/src/: gif.rs  gst.rs  gst_sink.rs  gst_src.rs  lib.rs  material.rs  raw.rs  raw_src.rs  rt.rs  video.rs  webp.rs
docs/: control_signals.png.kra  control_signals.png~  easings_functions.png.kra  easings_functions.png~  force_graph_function.png.kra  force_graph_function.png~  signal_generators.png.kra  signal_generators.png~  splash.png~
tools/authority/: Cargo.toml
tools/authority/src/: lib.rs  main.rs
tools/character_physics/: Cargo.toml
tools/character_physics/src/: main.rs
tools/empty/: Cargo.toml  index.html
tools/empty/src/: main.rs
tools/hexgrid/: Cargo.toml  assets
tools/hexgrid/assets/shaders/: lines.wgsl  voxels.wgsl
tools/hexgrid/assets/textures/: worldmap_sal.basis
tools/hexgrid/src/: main.rs
tools/mission/: Cargo.toml
tools/mission/src/: asset_ui.rs  common.rs  cop.rs  drag_and_drop.rs  game.rs  graph.rs  main.rs  robber.rs  token_ui.rs  ui.rs  utils.rs  wallet_ui.rs
tools/mission/src/behavior_trees/: mod.rs
tools/mission/src/behavior_trees/bank/: bank_generate.rs  bank_stealed.rs  mod.rs
tools/mission/src/behavior_trees/citizen/: mod.rs
tools/mission/src/behavior_trees/cop/: cop_alerted.rs  cop_bribed.rs  cop_capture.rs  cop_chase.rs  cop_rest.rs  mod.rs
tools/mission/src/behavior_trees/robber/: mod.rs  robber_bribe.rs  robber_captured.rs  robber_rest.rs  robber_run.rs  robber_steal.rs
tools/mission/src/behaviors/: agent_purchase.rs  agent_rest.rs  agent_work.rs  dead.rs  machine_production.rs  mission_behavior.rs  mod.rs  movement.rs  quest_behavior.rs  rest.rs
tools/mission/src/components/: bank.rs  citizen.rs  cop.rs  mod.rs  robber.rs
tools/net_peer/: Cargo.toml
tools/net_peer/src/: main.rs
tools/sandbox/: Cargo.toml  index.html
tools/sandbox/src/: main.rs  monkey.rs  sandbox.rs
tools/sandbox/web/: styles.css
tools/scripting/: Cargo.toml  index.html
tools/scripting/src/: behavior_server.rs  debug_behavior.rs  derived_behavior.rs  implemented_behavior.rs  main.rs
tools/sdf_csg/: Cargo.toml
tools/sdf_csg/src/: main.rs
tools/splines/: Cargo.toml
tools/splines/src/: main.rs
tools/video_player/: Cargo.toml
tools/video_player/src/: main.rs
tools/voxel/: Cargo.toml
tools/voxel/src/: main.rs
(+140 files in other folders)
