[package]
name = "simula_action"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9", features = ["serialize"] }
bevy_egui = "0.17"
simula_core = { path = "../../crates/simula_core" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7.1"
simula_action_macro = { path = "../../crates/simula_action/simula_action_macro" }

[dev-dependencies]

