[package]
name = "simula_action"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10", features = ["serialize"] }
# TODO: Temporal until bevy_egui is updated to bevy 0.10
bevy_egui = { git = "https://github.com/DGriffin91/bevy_egui", branch = "bevy_main" }
simula_core = { path = "../../crates/simula_core" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7.1"
simula_action_macro = { path = "../../crates/simula_action/simula_action_macro" }

[dev-dependencies]

