[package]
name = "simula_behavior"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = "0.18"

simula_core = { path = "../../crates/simula_core" }
simula_script = { path = "../../crates/simula_script" }

rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
pretty-type-name = "1.0"

[dev-dependencies]
