[package]
name = "simula_behavior"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = "0.18"

egui = { version = "0.21", features = ["serde"] }
egui_node_graph = { git = "https://github.com/Simbotic/egui_node_graph.git", rev = "3068b8cd9bad3a419682af273c01cd700bda2739", features = [
    "persistence",
] }

simula_core = { path = "../../crates/simula_core" }
simula_script = { path = "../../crates/simula_script" }

rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
pretty-type-name = "1.0"
anyhow = "1.0"

[dev-dependencies]
