[package]
name = "simula_behavior"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = "0.18"

egui_node_graph = { path = "../../crates/egui_node_graph" }

simula_core = { path = "../../crates/simula_core" }
simula_script = { path = "../../crates/simula_script" }
simula_inspector = { path = "../../crates/simula_inspector" }

simula_behavior_macro = { path = "../../crates/simula_behavior/simula_behavior_macro" }

rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
# serde_yaml = "0.9"
pretty-type-name = "1.0"
anyhow = "1.0"
strum = { version = "0.24", features = ["derive"] }
crossbeam-channel = "0.5.0"

[dev-dependencies]
