[package]
name = "simula_cad"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8" }

fj = { git = "https://github.com/hannobraun/Fornjot.git", rev = "ad7e8082949cb4907d7429b29af2df43b34b0c09" }
fj-math = { git = "https://github.com/hannobraun/Fornjot.git", rev = "ad7e8082949cb4907d7429b29af2df43b34b0c09" }
fj-operations = { git = "https://github.com/hannobraun/Fornjot.git", rev = "ad7e8082949cb4907d7429b29af2df43b34b0c09" }
fj-interop = { git = "https://github.com/hannobraun/Fornjot.git", rev = "ad7e8082949cb4907d7429b29af2df43b34b0c09" }

[dev-dependencies]
