[package]
name = "simula_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8" }
bevy_egui = "0.15"
bevy_console = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
enum-iterator = "0.7.0"
anyhow = "1.0.57"
rand = "0.8.4"
rand_chacha = "0.3.1"
ron = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nvml-wrapper = "0.8.0"
