[package]
name = "simula_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9" }
bevy-inspector-egui = "0.14"
serde = { version = "1.0", features = ["derive"] }
enum-iterator = "1.2"
enum-display-derive = "0.1.1"
oorandom = "11.1.3"
rand = "0.8.4"
petgraph = "0.6"

[dev-dependencies]
