[package]
name = "simula_core"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
bevy = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
enum-iterator = "1.4"
enum-display-derive = "0.1.1"
oorandom = "11.1.3"
rand = "0.8.4"
petgraph = "0.6"
clap = { version = "=4.3.4", features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.10", default-features = true }
ron = "0.8"
