[package]
name = "simula_hexgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", features = [
	"render",
	"bevy_winit",
	"ktx2", 
	"zstd", 
	"zlib",
] }
simula_camera = { path = "../../crates/simula_camera" }
simula_core = { path = "../../crates/simula_core" }
bevy-inspector-egui = "0.14"
bytemuck = "1.12.3"
rand = "0.8.5"

[lib]
path = "src/lib.rs"