[package]
name = "simula_hexgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10", features = [
	"bevy_render",
	"bevy_winit",
	"ktx2", 
	"zstd", 
	"zlib",
] }
bevy_egui = "0.20"
simula_camera = { path = "../../crates/simula_camera" }
simula_core = { path = "../../crates/simula_core" }
bytemuck = "1.13"
rand = "0.8.5"

[lib]
path = "src/lib.rs"