[package]
name = "simula_input"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8", features = ["serialize"] }
bevy_egui = "0.15.1"
simula_core = { path = "../../crates/simula_core" }
serde = { version = "1.0", features = ["derive"] }
bevy-inspector-egui = "0.12.1"

[dev-dependencies]

