[package]
name = "simula_mission"
version = "0.1.0"
edition = "2021"

[dependencies]
ta = "0.5"
bevy = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7.1"
hex = "0.4"
bevy_egui = "0.16.1"
bevy-inspector-egui = "0.13"
egui_extras = "0.19.0"
simula_viz = { path = "../../crates/simula_viz" }
rand = "0.8.5"

[dev-dependencies]
