[package]
name = "simula_mission"
version = "0.1.0"
edition = "2021"

[dependencies]
ta = "0.5"
bevy = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7.1"
hex = "0.4"
bevy_egui = "0.17"
bevy-inspector-egui = "0.14"
egui_extras = "0.19.0"
simula_viz = { path = "../../crates/simula_viz" }
rand = "0.8.5"
bevy_asset = "0.8.1"

[dev-dependencies]
