[package]
name = "simula_mission"
version = "0.1.0"
edition = "2021"

[dependencies]
ta = "0.5"
bevy = { version = "0.10" }
# TODO: Temporal until bevy_egui is updated to bevy 0.10
bevy_egui = { git = "https://github.com/DGriffin91/bevy_egui", branch = "bevy_main" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7.1"
hex = "0.4"

[dev-dependencies]
