[package]
name = "simula_net"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10", default-features = false }
simula_socket = { path = "../../crates/simula_socket" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
uuid = { version = "1.1", features = ["serde", "v4"] }