[package]
name = "simula_script"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
bevy = { version = "0.10" }
# bevy_console = { version = "0.7", default-features = false }
# bevy_console = { path = "../../../bevy-console" }
bevy_console = { git = "https://github.com/Simbotic/bevy-console.git", rev = "29691b8d48b98ef7aeddc9ea0fd4d514afe844a9" }

rhai = { version = "0.14", features = ["sync"]}
clap = { version = "=4.2.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
