[package]
name = "simula_script"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
bevy = { version = "0.10" }

rhai = { version = "0.15", features = ["sync"]}
clap = { version = "=4.2.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
