[package]
name = "simula_surrealdb"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
bevy = { version = "0.10" }
# surrealdb = "1.0.0-beta.9+20230402"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "f0e5753cd1f6fff0cc37d65112104bc8d42439a1" }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
