[package]
name = "simula_surrealdb"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
bevy = { version = "0.12" }
# surrealdb = "1.0.0-beta.9+20230402"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "8c6c5a5e37efb9207e3667c4e2766d5a2b43b468" }
# surrealdb = { path = "../../../surrealdb/lib", package = "surrealdb" }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
