[package]
name = "simula_video"
version = "0.1.0"
edition = "2021"

[features]
gif = ["image/gif"]
webp = ["image/webp"]
gst = [
    "dep:gstreamer",
    "dep:gstreamer-app",
    "dep:gstreamer-video",
    "dep:glib",
    "dep:derive_more",
    "dep:byte-slice-cast",
    "dep:anyhow",
]

[dependencies]
bevy = { version = "0.8" }
image = { version = "0.24", default-features = false }
wgpu = "0.13.1"
crossbeam-channel = { version = "0.5.0" }

# GStreamer dependencies
gstreamer = { version = "0.18", optional = true }
gstreamer-app = { version = "0.18", optional = true }
gstreamer-video = { version = "0.18", optional = true }
glib = { version = "0.15", optional = true }
derive_more = { version = "0.99.5", optional = true }
byte-slice-cast = { version = "1", optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
