[package]
name = "simula_video"
version = "0.1.0"
edition = "2021"

[features]
gif = ["image/gif"]
webp = ["image/webp"]
gst = [
  "dep:gstreamer",
  "dep:gstreamer-app",
  "dep:gstreamer-video",
  "dep:glib",
  "dep:derive_more",
  "dep:byte-slice-cast",
  "dep:anyhow",
]
video = ["web-sys", "wasm-bindgen"]

[dependencies]
bevy = { version = "0.10" }
image = { version = "0.24", default-features = false }
wgpu = "0.15"
crossbeam-channel = { version = "0.5" }
url = "2.3"
uuid = { version = "1.1", features = ["serde", "v4"] }

# GStreamer dependencies
gstreamer = { version = "0.18", optional = true }
gstreamer-app = { version = "0.18", optional = true }
gstreamer-video = { version = "0.18", optional = true }
glib = { version = "0.15", optional = true }
derive_more = { version = "0.99.5", optional = true }
byte-slice-cast = { version = "1", optional = true }
anyhow = { version = "1.0", optional = true }

# Web dependencies
wasm-bindgen = { version = "0.2.83", optional = true }
[dependencies.web-sys]
optional = true
version = "0.3"
features = [
  "Window",
  "Element",
  "HtmlVideoElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ContextAttributes2d",
  "ImageData",
  "HtmlDocument",
  "CssStyleDeclaration",
]

[dev-dependencies]
