[package]
name = "authority"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8" }
bevy-inspector-egui = { path = "../../../simula-inspector" }

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_net = { path = "../../crates/simula_net" }
simula_action = { path = "../../crates/simula_action" }

serde = { version = "1.0", features = ["derive"] }

[lib]
name = "simula_authority"
path = "src/lib.rs"
