[package]
name = "character_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9" }
bevy-inspector-egui = "0.17.0"
bevy_rapier3d = "0.20.0"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_action = { path = "../../crates/simula_action" }

rand = "0.8.5"
enum-iterator = "1.2"
enum-display-derive = "0.1.1"
regex = "1.7"
