[package]
name = "empty"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
bevy = { version = "0.12" }

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_action = { path = "../../crates/simula_action" }
simula_inspector = { path = "../../crates/simula_inspector" }

