[package]
name = "hexgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1" }
simula_hexgrid = { path = "../../crates/simula_hexgrid" }
simula_camera = { path = "../../crates/simula_camera" }
simula_core = { path = "../../crates/simula_core" }
simula_action = { path = "../../crates/simula_action" }
rand = "0.8.5"
bevy-inspector-egui = "0.17.0"
