[package]
name = "mission"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8" }
bevy-inspector-egui = "0.13"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_net = { path = "../../crates/simula_net" }
simula_action = { path = "../../crates/simula_action" }

anyhow = "1.0"
rand = "0.8.5"
enum-iterator = "0.7.0"
enum-display-derive = "0.1.1"

egui_node_graph = { rev = "75308d0e72dd604339cd864173ca31f1bc7a3fc7", git = "https://github.com/setzer22/egui_node_graph.git" }
