[package]
name = "mission"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8" }
bevy-inspector-egui = "0.13"
bevy_egui = "0.16"
egui = { version = "0.19.0", default-features = false }
egui_extras = "0.19.0"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_net = { path = "../../crates/simula_net" }
simula_action = { path = "../../crates/simula_action" }
simula_decision = { path = "../../crates/simula_decision" }
simula_mission = { path = "../../crates/simula_mission" }

anyhow = "1.0"
rand = "0.8.5"
enum-iterator = "0.7.0"
enum-display-derive = "0.1.1"
serde = { version = "1.0", features = ["derive"] }

egui_node_graph = { rev = "b65a780f35a383444f0559c63e1d0ea22e16076d", git = "https://github.com/setzer22/egui_node_graph.git", features = ["persistence"] }
