[package]
name = "mission"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
bevy = { version = "0.9" }
bevy_egui = "0.17"
bevy-inspector-egui = "0.14"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_action = { path = "../../crates/simula_action" }
simula_video = { path = "../../crates/simula_video", features = ["gif"] }
simula_mission = { path = "../../crates/simula_mission" }
simula_behavior = { path = "../../crates/simula_behavior" }

serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
enum-iterator = "1.2"
enum-display-derive = "0.1.1"
