[package]
name = "net_peer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = "0.17.0"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_net = { path = "../../crates/simula_net" }
simula_action = { path = "../../crates/simula_action" }

net_authority = { path = "../../tools/net_authority" }
