[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[features]
default = ["gif"]
gif = ["simula_video/gif"]
webp = ["simula_video/webp"]
gst = ["simula_video/gst"]

[dependencies]
bevy = { version = "0.10" }
bevy_mod_debugdump = "0.7"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_action = { path = "../../crates/simula_action" }
simula_video = { path = "../../crates/simula_video" }
simula_inspector = { path = "../../crates/simula_inspector" }
simula_cad = { path = "../../crates/simula_cad" }

rand = "0.8.5"
enum-iterator = "1.4"
enum-display-derive = "0.1.1"
