[package]
name = "scripting"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = "0.18"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_action = { path = "../../crates/simula_action" }
simula_script = { path = "../../crates/simula_script" }
simula_inspector = { path = "../../crates/simula_inspector" }
simula_behavior = { path = "../../crates/simula_behavior" }
simula_behavior_macro = { path = "../../crates/simula_behavior/simula_behavior_macro" }

serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.0"