[package]
name = "sdf_csg"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[dependencies]
bevy = { version = "0.12" }
bevy-inspector-egui = "0.21"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_action = { path = "../../crates/simula_action" }
simula_sdf = { path = "../../crates/simula_sdf" }

rand = "0.8.5"
enum-iterator = "1.4"
enum-display-derive = "0.1.1"

