[package]
name = "video_player"
version = "0.1.0"
edition = "2021"

[features]
default = ["gif", "video"]
gif = ["simula_video/gif"]
webp = ["simula_video/webp"]
gst = ["simula_video/gst"]
video = ["simula_video/video"]

[dependencies]
bevy = { version = "0.10" }
bevy_egui = "0.20.0"
bevy-inspector-egui = "0.18.0"
bevy_mod_debugdump = "0.7.0"
wgpu-types = "0.15.1"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_action = { path = "../../crates/simula_action" }
simula_video = { path = "../../crates/simula_video" }

rand = "0.8.5"
enum-iterator = "1.2"
enum-display-derive = "0.1.1"
url = "2.3"
