[package]
name = "video_player"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]

[features]
default = ["gif", "video"]
gif = ["simula_video/gif"]
webp = ["simula_video/webp"]
gst = ["simula_video/gst"]
video = ["simula_video/video"]

[dependencies]
bevy = { version = "0.12" }
bevy_egui = "0.23"
bevy-inspector-egui = "0.21"
bevy_mod_debugdump = "0.9"
wgpu-types = "0.15.1"

simula_core = { path = "../../crates/simula_core" }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
simula_action = { path = "../../crates/simula_action" }
simula_video = { path = "../../crates/simula_video" }

rand = "0.8.5"
enum-iterator = "1.4"
enum-display-derive = "0.1.1"
url = "2.3"
