[package]
name = "voxel"
version = "0.1.0"
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "51a5070cd2d3d7262616b2efc8a6cd3b1991d7e6", features = ["dynamic"] }
simula_camera = { path = "../../crates/simula_camera" }
simula_viz = { path = "../../crates/simula_viz" }
